# paperless-rs

./: .rustfmt.toml  Cargo.toml  README.md  docker-compose.test.env  docker-compose.test.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: ci-dev.yml
src/: lib.rs
src/authorization/: mod.rs
src/endpoint/: config.rs  correspondents.rs  document_types.rs  documents.rs  mod.rs  tags.rs
src/utils/: mod.rs  pagination.rs
tests/: endpoint_tests.rs  setup.rs
