[package]
name = "paperless-rs"
version = "0.1.0"
edition = "2021"

authors = ["boul2gom <contact@boul2gom.fr>"]
description = "An asynchronous Rust library for the Paperless-ngx document manager"

license = "GPL-3.0"
readme = "README.md"
documentation = "https://docs.rs/paperless-rs"
homepage = "https://github.com/boul2gom/paperless-rs"
repository = "https://github.com/boul2gom/paperless-rs"

categories = ["api-bindings", "asynchronous", "development-tools"]
keywords = ["paperless", "documents", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
async-trait = "0.1.75"
base64 = "0.21.5"

[dependencies.serde]
version = "1.0.194"
features = ["derive"]

[dependencies.tokio]
version = "1.35.1"
features = ["full"]

[dependencies.reqwest]
version = "0.11.23"
features = [
    "json",
    "default-tls"
]