[package]
name = "paperless-rs"
version = "0.1.5"
edition = "2021"

authors = ["boul2gom <contact@boul2gom.fr>"]
description = "An asynchronous Rust library for the Paperless-ngx document manager"

license = "GPL-3.0"
readme = "README.md"
documentation = "https://docs.rs/paperless-rs"
homepage = "https://github.com/boul2gom/paperless-rs"
repository = "https://github.com/boul2gom/paperless-rs"

categories = ["api-bindings", "asynchronous", "development-tools"]
keywords = ["paperless", "documents", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
async-trait = "0.1.77"
base64 = "0.22.0"
bytes = "1.5.0"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.26"
features = [
    "json",
    "default-tls"
]

[dev-dependencies]
printpdf = "0.7.0"
lazy_static = "1.4.0"